<resources>
    <string name="app_name">DoStudy</string>

    <!-- Strings for Home-Layout -->
    <string name="content_description_logo">logo</string>
    <string name="todo">To Do Liste</string>
    <string name="timetable">Stundenplan</string>
    <string name="calendar">Kalender</string>
    <string name="grades">Noten und Notizen</string>

    <!-- Strings for Login-Layout -->
    <string name="login_input_email">Username or email address</string>
    <string name="login_input_password">Password</string>
    <string name="login_checkbox">Remember me</string>
    <string name="login_button">Log in</string>
    <string name="login_button_signup">Sign up</string>
    <string name="login_forgot">Forgot your password?</string>

    <!-- Strings for Sign-up Layout -->
    <string name="signup_welcome">Welcome at DoStudy!</string>
    <string name="signup_input_email">Email address</string>
    <string name="signup_input_name">Name</string>
    <string name="signup_password">Create a password</string>
    <string name="signup_check_password">Confirm password</string>
    <string name="signup_button">Add account</string>
    <string name="signup_hint">By using DoStudy you accept our <b>Privacy Policy</b> and <b>Terms of use</b>.</string>
    <string name="date_picker">datePicker</string>
    <string name="adding_0">0</string>
    <string name="adding_double_dot">:</string>
    <string name="time_picker">timePicker</string>
    <string name="calendar_entry_intent">calendar_entry</string>

    <!-- Strings for ToDoList Layout -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_item_header">Aktuelle Aufgaben</string>
    <string name="add_item_hint">Neue Aufgabe</string>
    <string name="add_item_button_confirm">Hinzufügen</string>
    <string name="todo_text_date_hint">Datum festlegen</string>
    <string name="action_sort">Nach Datum sortieren</string>
    <string name="delete_all">Alle Aufgaben löschen</string>

    <!-- Strings for TimeTable Components -->
    <string name="personal_timetable">Mein Stundenplan</string>
    <string name="monday">Montag</string>
    <string name="tuesday">Dienstag</string>
    <string name="wednesday">Mittwoch</string>
    <string name="thursday">Donnerstag</string>
    <string name="friday">Freitag</string>

    <string name="day">Tag</string>
    <string name="button">OK</string>

    <string name="view_course">Kursdaten</string>
    <string name="course_title">Titel:</string>
    <string name="time">Zeit:</string>
    <string name="begin">von</string>
    <string name="end">bis</string>
    <string name="room">Raum:</string>
    <string name="lecturer">Dozent:</string>
    <string name="test">Klausur:</string>
    <string name="colour">Farbe:</string>
    <string name="button_save">speichern</string>

    <string name="colour_0">hellblau</string>
    <string name="colour_1">dunkelblau</string>
    <string name="colour_2">türkis</string>
    <string name="colour_3">hellgrün</string>
    <string name="colour_4">dunkelgrün</string>
    <string name="colour_5">gelb</string>
    <string name="colour_6">rot</string>
    <string name="colour_7">keine</string>

    <!-- Strings for Notification -->
    <string name="preferences_key_notifications">sharedPreferences</string>
    <string name="icon_for_navigation">icon For Navigation</string>
    <string name="calendar_entry_details_eventdetails">Ereignisdetails</string>
    <string name="calendar_entry_details_location_text">Standort</string>

    <string name="notification_calendar">Nicht vergessen! Du hast heute ein Ereignis</string>
    <string name="notification_title">DoStudy</string>
    <string name="notification_content_text_calendar">Bevorstehendes Ereignis</string>
    <string name="notification_click_calendar">Zum Kalender</string>

    <string name="notification_todo">Nicht vergessen! Du hast heute eine Aufgabe</string>
    <string name="notification_content_text_todo">Bevorstehende Aufgabe</string>
    <string name="notification_click_todo">Zur To-Do Liste</string>
    <string name="notification_ticker_todo">Du hast eine Aufgabe</string>




    <!-- Strings for Alert Dialog when deleting entry -->
    <string name="alert_dialog_builder_title">Achtung!</string>
    <string name="alert_dialog_builder_delete_title">Möchtest du diesen Eintrag wirklich löschen?</string>
    <string name="alert_dialog_builder_delete_yes">Löschen</string>
    <string name="alert_dialog_builder_delete_no">Abbrechen</string>

    <!-- String for Notes  -->
    <string name="notes_and_grades_notes_fragement">Notizen</string>
    <string name="notes_and_grades_grades_fragement">Noten</string>
    <string name="notes_grades_title_grades">Noten</string>
    <string name="notes_grades_title_notes">Notizen</string>
    <string name="notes_title">Notizen</string>
    <string name="notes_intent">Notes</string>
    <string name="add_calendar_entry_title_hint">Titel</string>
    <string name="toast_not_all_fields">Füge bitte einen Titel hinzu</string>
    <string name="toast_note_added">Notiz wurde hinzugefügt</string>
    <string name="calendar_entry_details">Ereignisdetails</string>
    <string name="calendar_entry_details_category">Kategorie</string>
    <string name="calendar_entry_details_location">Standort</string>
    <string name="dialog_overwrite">Die bestehende Datei überschreiben?</string>
    <string name="take_picture_intent">TakePictureIntent</string>
    <string name="menu_share_text">Hallo! Am %1$s findet %2$s statt. Magst du auch daran teilnehmen?</string>
    <string name="notes_details_lecture_title">Vorlesung</string>
    <string name="content_descripion_note_details">User added photo</string>
    <string name="add_note_add_button">Hinzufügen</string>

    <!-- Strings for Grades Layout -->
    <string name="grades_title">Meine Noten</string>
    <string name="add_course_hint">Kurs hinzufügen</string>
    <string name="add_grade_hint">Note hinzufügen</string>
    <string name="add_course_grade_button">Hinzufügen</string>
    <string name="dialog_take_picture">Foto aufnehmen</string>
    <string name="dialog_choos_from_gallery">Aus Galerie wählen</string>
    <string name="dialog_cancel">Abbrechen</string>
    <string name="dialog_select_an_action">Füge ein Foto hinzu</string>


    <!-- Strings for colour-array -->
    <string-array name="colourArray">
        <item>hellblau</item>
        <item>dunkelblau</item>
        <item>türkis</item>
        <item>hellgrün</item>
        <item>dunkelgrün</item>
        <item>gelb</item>
        <item>rot</item>
        <item>keine</item>
    </string-array>

    <!-- Strings for colour-array -->
    <string-array name="entry_category_array">
        <item>Klausur</item>
        <item>Deadline</item>
        <item>Party</item>
        <item>Termin</item>
        <item>Sonstiges</item>
    </string-array>

    <!-- Strings for reminder array -->
    <string-array name="entry_reminder_array">
        <item>Pünktlich</item>
        <item>15 Min. vorher</item>
        <item>30 Min. vorher</item>
        <item>2 Stunden vorher</item>
        <item>5 Stunden vorher</item>
        <item>12 Stunden vorher</item>
        <item>24 Stunden vorher</item>
    </string-array>

    <!-- Strings for Calendar -->
    <string name="calendar_menu_curr_date">Heutiges Datum</string>
    <string name="add_calendar_entry_all_day">Ganztägig</string>
    <string name="add_calendar_entry_date">Datum</string>
    <string name="add_calendar_entry_time">Uhrzeit</string>
    <string name="add_calendar_entry_notification">Benachrichtigung</string>
    <string name="add_calendar_entry_spinner_hint">Kategorie</string>
    <string name="add_calendar_entry_button_add">Hinzufügen</string>
    <string name="add_calendar_entry_location_reminder">An diesem Ort erinnern</string>
    <string name="add_calendar_entry_add_location">Location hinzufügen</string>
    <string name="add_calendar_entry_reminder">add_calendar_entry_reminder_hint</string>
    <string name="toast_missing_category">Wähle bitte ein Kategorie</string>
    <string name="toast_missing_date">Füge bitte ein Datum hinzu</string>
    <string name="toast_missing_reminder">Wähle bitte einen Wert für Benachrichtigungen aus</string>
    <string name="calendar_entry_details_alarm_tv">Benachrichtigung</string>
    <string name="calendar_entry_details_date_title">Datum</string>
    <string name="calendar_entry_details_date_time_title">Uhrzeit</string>
    <string name="calendar_entry_details_date_description_title">Beschreibung</string>
    <string name="content_description_button">Button</string>
    <string name="add_calendar_entry_default_time">00:00</string>
    <string name="toast_calendar_entry_added">Ereignis wurde hinzugefügt</string>
    <string name="add_note_lecture_hint">Vorlesung</string>
    <string name="add_note_date_title">Datum</string>
    <string name="add_notes_edit_note_hint">Notizen...</string>
    <string name="add_note_add_picture">Foto hinzufügen</string>
    <string name="toast_entry_deleted">Eintrag gelöscht</string>

</resources>
