<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:paddingBottom="16dp"
        android:text="@string/add_item_header"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/todo_edit_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_item_hint"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:maxLines="1"
        android:padding="10dp"
        android:textColorLink="@color/holoBlue"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">


        <EditText
            android:id="@+id/todo_edit_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:focusable="false"
            android:hint="@string/todo_text_date_hint"
            android:inputType="date"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:textColorLink="@color/holoBlue"
            />

        <Button
            android:id="@+id/todo_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_item_button_confirm" />

    </LinearLayout>

    <ListView
        android:id="@+id/todo_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:padding="10dp" />

</LinearLayout>
