<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:background="@android:color/holo_blue_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/signup_welcome"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:textColor="#fff"
            android:textSize="24sp"
            android:text="@string/signup_welcome"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_input_email"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:background="@android:color/transparent"
            android:drawablePadding="12dp"
            android:padding="8dp"
            android:hint="@string/signup_input_email"
            android:textColorHint="#fff"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_email_white_24dp"
            android:layout_marginTop="5dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f9d7db"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_input_name"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:background="@android:color/transparent"
            android:drawablePadding="12dp"
            android:padding="8dp"
            android:hint="@string/signup_input_name"
            android:textColorHint="#fff"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_person_white_24dp"
            android:layout_marginTop="5dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f9d7db"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_input_password"
            android:inputType="textPassword"
            android:ems="10"
            android:drawablePadding="12dp"
            android:padding="8dp"
            android:hint="@string/signup_password"
            android:textColorHint="#fff"
            android:maxLines="1"
            android:background="@android:color/transparent"
            android:layout_marginTop="4dp"
            android:drawableLeft="@drawable/ic_lock_white_24dp"
            android:drawableStart="@drawable/ic_lock_white_24dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f9d7db"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_check_password"
            android:inputType="textPassword"
            android:ems="10"
            android:drawablePadding="12dp"
            android:padding="8dp"
            android:hint="@string/signup_check_password"
            android:textColorHint="#fff"
            android:maxLines="1"
            android:background="@android:color/transparent"
            android:layout_marginTop="4dp"
            android:drawableLeft="@drawable/ic_lock_white_24dp"
            android:drawableStart="@drawable/ic_lock_white_24dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f9d7db"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_button"
            android:background="@drawable/background_login"
            android:text="@string/signup_button"
            android:textColor="#f16f7d"
            android:textAllCaps="false"
            android:padding="16dp"
            android:clickable="true"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_marginTop="24dp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_policy"
            android:text="@string/signup_hint"
            style="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#fff"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:clickable="true"
            android:layout_marginBottom="2dp"
            android:textSize="10sp"/>
    </LinearLayout>
</LinearLayout>