<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#f4f4f4" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grades_title"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/holoBlue"
        android:padding="10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">


        <EditText
            android:id="@+id/add_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.74"
            android:focusable="false"
            android:hint="@string/add_course_hint"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:textColorLink="@color/holoBlue"
            />

        <Button
            android:id="@+id/grades_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_item_button_confirm" />

    </LinearLayout>

    <ExpandableListView
        android:id="@+id/lvExp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"/>

</LinearLayout>