<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alicia.dostudy.TimeTable.CourseActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_course"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/course_title"
                android:textColor="@android:color/black"
                android:drawableStart="@drawable/ic_chat_bubble_outline_black_24dp"
                android:drawableLeft="@drawable/ic_chat_bubble_outline_black_24dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:drawablePadding="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:inputType="text"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/time"
                android:textColor="@android:color/black"
                android:drawableStart="@drawable/ic_access_time_black_24dp"
                android:drawableLeft="@drawable/ic_access_time_black_24dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/begin"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="45dp"
                    android:layout_marginStart="45dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/time_begin"
                    android:inputType="time"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="45dp"
                    android:layout_marginStart="45dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/time_end"
                    android:inputType="time"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/room"
                android:textColor="@android:color/black"
                android:drawableStart="@drawable/ic_place_black_24dp"
                android:drawableLeft="@drawable/ic_place_black_24dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:drawablePadding="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/room"
                android:inputType="text"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/lecturer"
                android:textColor="@android:color/black"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:drawablePadding="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lecturer"
                android:inputType="text"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/test"
                android:textColor="@android:color/black"
                android:drawableStart="@drawable/ic_school_black_24dp"
                android:drawableLeft="@drawable/ic_school_black_24dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:drawablePadding="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/test"
                android:inputType="date"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/colour"
                    android:textColor="@android:color/black"
                    android:drawableStart="@drawable/ic_color_lens_black_24dp"
                    android:drawableLeft="@drawable/ic_color_lens_black_24dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:drawablePadding="10dp"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/colour"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_save"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
