<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="25dp" >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:contentDescription="@string/content_description_button"
                android:id="@+id/notes_grades_button_notes"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@color/holoBlue"
                android:clickable="true"/>

            <TextView
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:text="@string/notes_grades_title_notes"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textAllCaps="true"
                />

            <ImageView
                android:contentDescription="icon"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/ic_event_white_24dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/notes_grades_button_grades"
                android:contentDescription="@string/content_description_button"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@color/holoBlue"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:clickable="true" />

            <TextView
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:text="@string/notes_grades_title_grades"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
</LinearLayout>